--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -85,80 +85,64 @@
 		</div>
 	</nav>
 
-	<div class="bgimg1 height500px">
-		<div class="col-md-5 p-lg-5 mx-auto my-5">
-			<h1 class="display-4 font-weight-normal">Unsere Preise</h1>
-			<p class="lead font-weight-normal">Informieren Sie sich hier über
-				unsere Preismodelle</p>
-			<a class="btn btn-outline-secondary"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Zum
-				Verleih</a>
+	<div class="bgimg6">
+		<div class="col-md-5 p-lg-5 mx-auto my-5 topPadding topMargin2">
+			<h1 class="display-4 font-weight-normal fontShadow">Unsere
+				Fahrräder</h1>
+			<p class="lead font-weight-normal fontShadow">Hier können Sie
+				unsere verschiedenen Fahrradmodelle ausleihen. Stöbern Sie einfach
+				durch die verschiedenen Räder und wählen Sie das Fahrrad aus, das am
+				besten zu Ihnen passt.</p>
 		</div>
 	</div>
 
-	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 largeMargin">
-		<div class="snip1214">
-			<div class="plan">
-				<h3 class="plan-title">Basic</h3>
-				<div class="plan-cost">
-					<span class="plan-price">3€</span><span class="plan-type">/
-						Stunde</span>
-				</div>
-				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>5GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>5 MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>250Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
-				</ul>
-				<div class="plan-select">
-					<a href="">Preisoption wählen</a>
-				</div>
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="bgimg7">
+			<div class="my-3 py-3">
+				<h2>Herrenrad</h2>
+				<a class="btn btn-outline-secondary topMargin2"
+					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 			</div>
-			<div class="plan">
-				<h3 class="plan-title">Premium</h3>
-				<div class="plan-cost">
-					<span class="plan-price">5€</span><span class="plan-type">/
-						Stunde</span>
-				</div>
-				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>10GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>10 MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>500Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
-				</ul>
-				<div class="plan-select">
-					<a href="">Preisoption wählen</a>
-				</div>
-			</div>
-			<div class="plan">
-				<h3 class="plan-title">Professional</h3>
-				<div class="plan-cost">
-					<span class="plan-price">8€</span><span class="plan-type">/
-						Stunde</span>
-				</div>
-				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>100GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>Unlimited MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>10000Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
-				</ul>
-				<div class="plan-select">
-					<a href="">Preisoption wählen</a>
-				</div>
+		</div>
+		<div class="bgimg8">
+			<div class="my-3 p-3">
+				<h2>Damenrad</h2>
+				<a class="btn btn-outline-secondary topMargin2"
+					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 			</div>
 		</div>
 	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="bgimg9">
+			<div class="my-3 py-3">
+				<h2>Kinderrad</h2>
+				<a class="btn btn-outline-secondary topMargin2"
+					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			</div>
+		</div>
+		<div class="bgimg10">
+			<div class="my-3 p-3">
+				<h2>E-Bike</h2>
+				<a class="btn btn-outline-secondary topMargin2"
+					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="bgimg11">
+			<div class="my-3 py-3">
+				<h2>Mountainbike</h2>
+				<a class="btn btn-outline-secondary topMargin2"
+					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			</div>
+		</div>
+	</div>
+
 
 	<div class="textDiv">
-		<p>Kontaktieren Sie uns gerne falls Sie Fragen zu den
-			verschiedenen Preisoptionen haben. Nutzen Sie falls möglich das
-			Kontaktformular.</p>
+		<p>Wenden Sie sich bei Fragen gerne an uns.</p>
 	</div>
 
 	<footer class="container py-5">
