--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -97,47 +97,51 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="bgimg7">
-			<div class="my-3 py-3">
-				<h2>Herrenrad</h2>
-				<a class="btn btn-outline-secondary topMargin2"
-					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
-			</div>
+		<div class="textDiv3">
+			<h2>Herrenrad</h2>
+			<a class="btn btn-outline-secondary topMargin2"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
-		<div class="bgimg8">
-			<div class="my-3 p-3">
-				<h2>Damenrad</h2>
-				<a class="btn btn-outline-secondary topMargin2"
-					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
-			</div>
+		<div class="textDiv3">
+			<h2>Damenrad</h2>
+			<a class="btn btn-outline-secondary topMargin2"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="bgimg9">
-			<div class="my-3 py-3">
-				<h2>Kinderrad</h2>
-				<a class="btn btn-outline-secondary topMargin2"
-					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
-			</div>
+		<div class="bgimg7"></div>
+		<div class="bgimg8"></div>
+	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="textDiv3">
+			<h2>Kinderrad</h2>
+			<a class="btn btn-outline-secondary topMargin2"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
-		<div class="bgimg10">
-			<div class="my-3 p-3">
-				<h2>E-Bike</h2>
-				<a class="btn btn-outline-secondary topMargin2"
-					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
-			</div>
+		<div class="textDiv3">
+			<h2>E-Bike</h2>
+			<a class="btn btn-outline-secondary topMargin2"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="bgimg11">
-			<div class="my-3 py-3">
-				<h2>Mountainbike</h2>
-				<a class="btn btn-outline-secondary topMargin2"
-					href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
-			</div>
+		<div class="bgimg9"></div>
+		<div class="bgimg10"></div>
+	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="textDiv3">
+			<h2>Mountainbike</h2>
+			<a class="btn btn-outline-secondary topMargin2"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
+	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+		<div class="bgimg11"></div>
 	</div>
 
 
