--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -99,18 +99,18 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 largeMargin">
 		<div class="snip1214">
 			<div class="plan">
-				<h3 class="plan-title">Basic</h3>
+				<h3 class="plan-title">Standard</h3>
 				<div class="plan-cost">
-					<span class="plan-price">3€</span><span class="plan-type">/
+					<span class="plan-price">2€</span><span class="plan-type">/
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>5GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>5 MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>250Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+					<li><i class="ion-checkmark"> </i>Herren-, Damen- und Kinderfahrräder</li>
+					<li><i class="ion-checkmark"> </i>Verleih an ausgewählten Standorten</li>
+					<li><i class="ion-checkmark"> </i>Rückgabe an ausgewählten Standorten</li>
+					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: 24h</li>
+					<li><i class="ion-checkmark"> </i>Standardversicherung</li>
+					<li><i class="ion-checkmark"> </i>exkl. Zubehör</li>
 				</ul>
 				<div class="plan-select">
 					<a href="">Preisoption wählen</a>
@@ -119,34 +119,34 @@
 			<div class="plan">
 				<h3 class="plan-title">Premium</h3>
 				<div class="plan-cost">
-					<span class="plan-price">5€</span><span class="plan-type">/
+					<span class="plan-price">4€</span><span class="plan-type">/
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>10GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>10 MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>500Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+					<li><i class="ion-checkmark"> </i>Herren-, Damen-, Kinder- und Mountainbikefahrräder</li>
+					<li><i class="ion-checkmark"> </i>Verleih an allen Standorten</li>
+					<li><i class="ion-checkmark"> </i>Rückgabe an allen Standorten</li>
+					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: 72h</li>
+					<li><i class="ion-checkmark"> </i>Premiumversicherung</li>
+					<li><i class="ion-checkmark"> </i>inkl. Zubehör</li>
 				</ul>
 				<div class="plan-select">
 					<a href="">Preisoption wählen</a>
 				</div>
 			</div>
 			<div class="plan">
-				<h3 class="plan-title">Professional</h3>
+				<h3 class="plan-title">Spezial</h3>
 				<div class="plan-cost">
-					<span class="plan-price">8€</span><span class="plan-type">/
+					<span class="plan-price">6€</span><span class="plan-type">/
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>100GB Linux Web Space</li>
-					<li><i class="ion-checkmark"> </i>Unlimited MySQL Databases</li>
-					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
-					<li><i class="ion-checkmark"> </i>10000Gb Monthly Transfer</li>
-					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
-					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+					<li><i class="ion-checkmark"> </i>Alle Fahrradtypen inkl. E-Bikes</li>
+					<li><i class="ion-checkmark"> </i>Verleih an allen Standorten</li>
+					<li><i class="ion-checkmark"> </i>Rückgabe an allen Standorten</li>
+					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: unbegrenzt</li>
+					<li><i class="ion-checkmark"> </i>Spezialversicherung</li>
+					<li><i class="ion-checkmark"> </i>inkl. Zubehör und kostenlosem Laden</li>
 				</ul>
 				<div class="plan-select">
 					<a href="">Preisoption wählen</a>
@@ -156,9 +156,11 @@
 	</div>
 
 	<div class="textDiv">
+		<p>Sämtliche Preise sind selbstverständlich inklusive 19% MwSt.
+			und ohne zusätzliche Gebühr.</p>
 		<p>Kontaktieren Sie uns gerne falls Sie Fragen zu den
-			verschiedenen Preisoptionen haben. Nutzen Sie falls möglich das
-			Kontaktformular.</p>
+			verschiedenen Preisoptionen haben. Kontaktinformationen finden Sie
+			unter dem Tab "Kontakt".</p>
 	</div>
 
 	<footer class="container py-5">
