--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -90,7 +90,7 @@
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
 				des Fahrradleasings und erleben Sie unkomplizierte, flexible
 				Fahrradvermietung zu unschlagbaren Preisen!</p>
-			<a class="btn btn-outline-secondary" href="localhost/Fahrradverleih_MN/verleih.html">Unser Portfolio</a>
+			<a class="btn btn-outline-secondary" href="http://localhost/Fahrradverleih_MN/preise.html">Unser Portfolio</a>
 		</div>
 	</div>
 
