java database connection

--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -99,8 +99,8 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div class="textDiv3">
 			<h2>Herrenrad</h2>
-			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			<input class="btn btn-outline-secondary topMargin2"
+				type="button" onclick="bestandsupdate(1)">Ausleihen!
 		</div>
 		<div class="textDiv3">
 			<h2>Damenrad</h2>
