--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -99,8 +99,8 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div class="textDiv3">
 			<h2>Herrenrad</h2>
-			<input class="btn btn-outline-secondary topMargin2"
-				type="button" onclick="bestandsupdate(1)">Ausleihen!
+			<button class="btn btn-outline-secondary topMargin2"
+				type="button" onclick="bestandsupdate(1)">Ausleihen!</button>
 		</div>
 		<div class="textDiv3">
 			<h2>Damenrad</h2>
@@ -198,6 +198,8 @@
 						.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
 	</script>
 	<script src="canvas.js"></script>
+	<script src="bestandupdate.js"></script>
+	<script src="verleihupdate.js"></script>
 	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
 		crossorigin="anonymous"></script>
