--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -105,9 +105,12 @@
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>Herren-, Damen- und Kinderfahrräder</li>
-					<li><i class="ion-checkmark"> </i>Verleih an ausgewählten Standorten</li>
-					<li><i class="ion-checkmark"> </i>Rückgabe an ausgewählten Standorten</li>
+					<li><i class="ion-checkmark"> </i>Herren-, Damen- und
+						Kinderfahrräder</li>
+					<li><i class="ion-checkmark"> </i>Verleih an ausgewählten
+						Standorten</li>
+					<li><i class="ion-checkmark"> </i>Rückgabe an ausgewählten
+						Standorten</li>
 					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: 24h</li>
 					<li><i class="ion-checkmark"> </i>Standardversicherung</li>
 					<li><i class="ion-checkmark"> </i>exkl. Zubehör</li>
@@ -123,7 +126,8 @@
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>Herren-, Damen-, Kinder- und Mountainbikefahrräder</li>
+					<li><i class="ion-checkmark"> </i>Herren-, Damen-, Kinder- und
+						Mountainbikefahrräder</li>
 					<li><i class="ion-checkmark"> </i>Verleih an allen Standorten</li>
 					<li><i class="ion-checkmark"> </i>Rückgabe an allen Standorten</li>
 					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: 72h</li>
@@ -141,12 +145,15 @@
 						Stunde</span>
 				</div>
 				<ul class="plan-features">
-					<li><i class="ion-checkmark"> </i>Alle Fahrradtypen inkl. E-Bikes</li>
+					<li><i class="ion-checkmark"> </i>Alle Fahrradtypen inkl.
+						E-Bikes</li>
 					<li><i class="ion-checkmark"> </i>Verleih an allen Standorten</li>
 					<li><i class="ion-checkmark"> </i>Rückgabe an allen Standorten</li>
-					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer: unbegrenzt</li>
+					<li><i class="ion-checkmark"> </i>Maximale Ausleihdauer:
+						unbegrenzt</li>
 					<li><i class="ion-checkmark"> </i>Spezialversicherung</li>
-					<li><i class="ion-checkmark"> </i>inkl. Zubehör und kostenlosem Laden</li>
+					<li><i class="ion-checkmark"> </i>inkl. Zubehör und
+						kostenlosem Laden</li>
 				</ul>
 				<div class="plan-select">
 					<a href="">Preisoption wählen</a>
@@ -203,15 +210,9 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script>
-		window.jQuery
-				|| document
-						.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
-	</script>
 	<script src="canvas.js"></script>
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
 		crossorigin="anonymous"></script>
