--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -99,8 +99,8 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div class="textDiv3">
 			<h2>Herrenrad</h2>
-			<button class="btn btn-outline-secondary topMargin2"
-				type="button" onclick="bestandsupdate(1)">Ausleihen!</button>
+			<button class="btn btn-outline-secondary topMargin2" type="button"
+				onclick="bestandsupdate(1)">Ausleihen!</button>
 		</div>
 		<div class="textDiv3">
 			<h2>Damenrad</h2>
@@ -189,18 +189,11 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script>
-		window.jQuery
-				|| document
-						.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
-	</script>
 	<script src="canvas.js"></script>
 	<script src="bestandupdate.js"></script>
 	<script src="verleihupdate.js"></script>
-	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
 		crossorigin="anonymous"></script>
 	<script
