--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -104,8 +104,8 @@
 		</div>
 		<div class="textDiv3">
 			<h2>Damenrad</h2>
-			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			<button class="btn btn-outline-secondary topMargin2" type="button"
+				onclick="bestandsupdate(2)">Ausleihen!</button>
 		</div>
 	</div>
 
@@ -117,13 +117,13 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div class="textDiv3">
 			<h2>Kinderrad</h2>
-			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			<button class="btn btn-outline-secondary topMargin2" type="button"
+				onclick="bestandsupdate(3)">Ausleihen!</button>
 		</div>
 		<div class="textDiv3">
 			<h2>E-Bike</h2>
-			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			<button class="btn btn-outline-secondary topMargin2" type="button"
+				onclick="bestandsupdate(5)">Ausleihen!</button>
 		</div>
 	</div>
 
@@ -135,8 +135,8 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div class="textDiv3">
 			<h2>Mountainbike</h2>
-			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+			<button class="btn btn-outline-secondary topMargin2" type="button"
+				onclick="bestandsupdate(4)">Ausleihen!</button>
 		</div>
 	</div>
 
@@ -195,7 +195,8 @@
 	<script src="bestandupdate.js"></script>
 	<script src="verleihupdate.js"></script>
 	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
 		crossorigin="anonymous"></script>
 	<script
