--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -86,7 +86,7 @@
 
 	<div class="bgimg1 height500px">
 		<div class="col-md-5 p-lg-4 mx-auto margin-header">
-			<h1 class=display-5>Fahrradverleih auch in ihrer Nähe!</h1>
+			<h1 class=display-5>Fahrradverleih MN in Mannheim</h1>
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
 				des Fahrradleasings und erleben Sie unkomplizierte, flexible
 				Fahrradvermietung zu unschlagbaren Preisen!</p>
