--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -97,12 +97,12 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="textDiv3">
+		<div id="1" class="textDiv3">
 			<h2>Herrenrad</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(1)">Ausleihen!</button>
 		</div>
-		<div class="textDiv3">
+		<div id="2" class="textDiv3">
 			<h2>Damenrad</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(2)">Ausleihen!</button>
@@ -115,12 +115,12 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="textDiv3">
+		<div id="3" class="textDiv3">
 			<h2>Kinderrad</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(3)">Ausleihen!</button>
 		</div>
-		<div class="textDiv3">
+		<div id="5" class="textDiv3">
 			<h2>E-Bike</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(5)">Ausleihen!</button>
@@ -133,7 +133,7 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="textDiv3">
+		<div id="4" class="textDiv3">
 			<h2>Mountainbike</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(4)">Ausleihen!</button>
@@ -193,7 +193,7 @@
 
 	<script src="canvas.js"></script>
 	<script src="bestandupdate.js"></script>
-	<script src="verleihupdate.js"></script>
+	<script src="divUpdate.js"></script>
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
