--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -105,7 +105,7 @@
 		<div class="textDiv3">
 			<h2>Damenrad</h2>
 			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 	</div>
 
@@ -118,12 +118,12 @@
 		<div class="textDiv3">
 			<h2>Kinderrad</h2>
 			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 		<div class="textDiv3">
 			<h2>E-Bike</h2>
 			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 	</div>
 
@@ -136,7 +136,7 @@
 		<div class="textDiv3">
 			<h2>Mountainbike</h2>
 			<a class="btn btn-outline-secondary topMargin2"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Ausleihen!</a>
 		</div>
 	</div>
 
