Bean Implementierung und Fix

--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -78,7 +78,7 @@
 				href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				href="http://localhost/Fahrradverleih_MN/bestand.jsp">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
@@ -119,13 +119,11 @@
 			<h2>Kinderrad</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(3)">Ausleihen!</button>
-
 		</div>
 		<div id="5" class="textDiv3">
 			<h2>E-Bike</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(5)">Ausleihen!</button>
-
 		</div>
 	</div>
 
@@ -139,7 +137,6 @@
 			<h2>Mountainbike</h2>
 			<button class="btn btn-outline-secondary topMargin2" type="button"
 				onclick="bestandsupdate(4)">Ausleihen!</button>
-
 		</div>
 	</div>
 
@@ -178,7 +175,7 @@
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost/Fahrradverleih_MN/bestand.html">Unser
+						href="http://localhost/Fahrradverleih_MN/bestand.jsp">Unser
 							Fahrradbestand</a></li>
 				</ul>
 			</div>
@@ -196,7 +193,6 @@
 
 	<script src="canvas.js"></script>
 	<script src="bestandupdate.js"></script>
-	<script src="divUpdate.js"></script>
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
