--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -77,14 +77,14 @@
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				href="http://localhost/Fahrradverleih_MN/bestand.jsp">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
 		</div>
 	</nav>
 
-	<div class="bgimg1 height500px">
+	<div class="bgimg1 height600px">
 		<div class="col-md-5 p-lg-4 mx-auto margin-header">
 			<h1 class=display-5>Fahrradverleih MN in Mannheim</h1>
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
@@ -157,7 +157,7 @@
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost/Fahrradverleih_MN/bestand.html">Unser
+						href="http://localhost/Fahrradverleih_MN/bestand.jsp">Unser
 							Fahrradbestand</a></li>
 				</ul>
 			</div>
