--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -91,7 +91,8 @@
 				<p>O4 7, 68161 Mannheim, Germany</p>
 				<p>Fahrradverleih@MN.com</p>
 				<p>0621 520943</p>
-				<a class="btn btn-outline-secondary topMargin" href="#">Impressum
+				<a class="btn btn-outline-secondary topMargin"
+					href="http://localhost/Fahrradverleih_MN/impressum.html">Impressum
 					anzeigen</a>
 			</div>
 		</div>
@@ -154,7 +155,7 @@
 					<li><a class="text-muted"
 						href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
 					<li><a class="text-muted"
-						href="http://localhost/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+						href="http://localhost/Fahrradverleih_MN/impressum.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
