--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -97,15 +97,21 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div id="1" class="textDiv3">
-			<h2>Herrenrad</h2>
-			<button class="btn btn-outline-secondary topMargin2" type="button"
-				onclick="bestandsupdate(1)">Ausleihen!</button>
+		<div>
+			<div class="textDiv5">
+				<h2>Herrenrad</h2>
+				<button class="btn btn-outline-secondary topMargin2" type="button"
+					onclick="bestandsupdate(1)">Ausleihen!</button>
+			</div>
+			<div id="1" class="textDiv6"></div>
 		</div>
-		<div id="2" class="textDiv3">
-			<h2>Damenrad</h2>
-			<button class="btn btn-outline-secondary topMargin2" type="button"
-				onclick="bestandsupdate(2)">Ausleihen!</button>
+		<div>
+			<div class="textDiv5">
+				<h2>Damenrad</h2>
+				<button class="btn btn-outline-secondary topMargin2" type="button"
+					onclick="bestandsupdate(2)">Ausleihen!</button>
+			</div>
+			<div id="2" class="textDiv6"></div>
 		</div>
 	</div>
 
@@ -115,15 +121,21 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div id="3" class="textDiv3">
-			<h2>Kinderrad</h2>
-			<button class="btn btn-outline-secondary topMargin2" type="button"
-				onclick="bestandsupdate(3)">Ausleihen!</button>
+		<div>
+			<div class="textDiv5">
+				<h2>Kinderrad</h2>
+				<button class="btn btn-outline-secondary topMargin2" type="button"
+					onclick="bestandsupdate(3)">Ausleihen!</button>
+			</div>
+			<div id="3" class="textDiv6"></div>
 		</div>
-		<div id="5" class="textDiv3">
-			<h2>E-Bike</h2>
-			<button class="btn btn-outline-secondary topMargin2" type="button"
-				onclick="bestandsupdate(5)">Ausleihen!</button>
+		<div>
+			<div class="textDiv5">
+				<h2>E-Bike</h2>
+				<button class="btn btn-outline-secondary topMargin2" type="button"
+					onclick="bestandsupdate(5)">Ausleihen!</button>
+			</div>
+			<div id="5" class="textDiv6"></div>
 		</div>
 	</div>
 
@@ -133,10 +145,13 @@
 	</div>
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div id="4" class="textDiv3">
-			<h2>Mountainbike</h2>
-			<button class="btn btn-outline-secondary topMargin2" type="button"
-				onclick="bestandsupdate(4)">Ausleihen!</button>
+		<div>
+			<div class="textDiv5">
+				<h2>Mountainbike</h2>
+				<button class="btn btn-outline-secondary topMargin2" type="button"
+					onclick="bestandsupdate(4)">Ausleihen!</button>
+			</div>
+			<div id="4" class="textDiv6"></div>
 		</div>
 	</div>
 
@@ -185,7 +200,7 @@
 					<li><a class="text-muted"
 						href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
 					<li><a class="text-muted"
-						href="http://localhost/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+						href="http://localhost/Fahrradverleih_MN/impressum.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
