--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -81,7 +81,7 @@
 				href="http://localhost/Fahrradverleih_MN/bestand.jsp">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
+				class="py-2 d-none d-md-inline-block" href="../index.php">An-/Abmelden</a>
 		</div>
 	</nav>
 
@@ -91,7 +91,7 @@
 			<p class="lead font-weight-normal">Informieren Sie sich hier über
 				unsere Preismodelle</p>
 			<a class="btn btn-outline-secondary"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Zum
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Zum
 				Verleih</a>
 		</div>
 	</div>
