--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -66,7 +66,7 @@
 				href="http://localhost/Fahrradverleih_MN/bestand.jsp">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
+				class="py-2 d-none d-md-inline-block" href="../index.php">An-/Abmelden</a>
 		</div>
 	</nav>
 
